# txtree

./: .gitignore  Makefile  README.md  pyproject.toml
src/grapher/: __init__.py  main.py
src/txtree/: __init__.py  main.py
src/txtree/tree/: nodes.py  tree.py
tests/tree/: test_tree.py
